# couchbase-connect-py

./: .gitignore  Makefile  README.md  pyproject.toml
couchbase_connect/: __init__.py  auto.py  base.py  cli.py  cloud.py  cluster_create.py  config.py  enums.py  exceptions.py  models.py  protocol.py  retry.py  server.py  stream.py
couchbase_connect/capella/: __init__.py  allowed_cidr.py  bucket.py  certificate.py  client.py  cluster.py  connect.py  connectivity.py  credentials.py  exceptions.py  models.py  organization.py  project.py  user.py  utils.py
tests/: conftest.py  couchbase_server_container.py  helpers.py  test_capella_cluster_create.py  test_capella_driver1.py  test_capella_driver2.py  test_cli.py  test_cluster_create_alternate.py  test_connectivity.py  test_couchbase_connect.py  test_population.py  test_retry.py  test_server_cluster_create.py  test_server_driver1.py  test_server_driver2.py
tests/resources/: test.capella.1.properties.example  test.capella.2.properties.example  test.server.properties
